@startuml

title __ECM's Class Diagram__\n

  namespace io.radien.ms.ecm {
    class io.radien.ms.ecm.ContentRepository {
        {static} - log : Logger
        {static} - serialVersionUID : long
        - session : Session
        + delete()
        + getByContentType()
        + getByViewId()
        + getChildren()
        + getDocumentsTreeModel()
        + getOAF()
        + loadFile()
        + registerCNDNodeTypes()
        + save()
        + searchContent()
        # getDocumentsContentNode()
        # getHTMLContentNode()
        # getImageContentNode()
        # getNewsFeedContentNode()
        # getNode()
        # getNotificationContentNode()
        # getRootNode()
        - getNodeByViewId()
        - init()
        - loopNodes()
        - loopNodes()
    }
  }
  

  namespace io.radien.ms.ecm {
    class io.radien.ms.ecm.ECMApplication {
    }
  }
  

  io.radien.ms.ecm.ContentRepository .up.|> io.radien.api.Appframeable
  io.radien.ms.ecm.ContentRepository .up.|> java.io.Serializable
  io.radien.ms.ecm.ContentRepository o-- io.radien.ms.ecm.factory.ContentFactory : contentFactory
  io.radien.ms.ecm.ContentRepository o-- io.radien.api.OAFAccess : oaf
  io.radien.ms.ecm.ECMApplication -up-|> javax.ws.rs.core.Application


 

@enduml
